TAG: pgmgddbschema-tr6519-BP
DATE: 12/04/2012
STAFF: jsb
CHANGES: branch point for TR6519 (n-to-m orthologs) release

TAG: pgmgddbschema-5-1-1-1
DATE: 11/02/2012
STAFF: dbm
CHANGES: TR7106
1) table/MRK_Location_Cache_create.object: added genomicChromosome field

TAG: pgmgddbschema-tr10273-BP
DATE: 10/01/2012
STAFF: lec
CHANGES: branch point tag for TR10273

TAG: pgmgddbschema-5-0-0-7
DATE: 08/02/2012
STAFF: lec
CHANGES: 
a)added 'trigger'
b)updated CLUSTER syntax

TAG: pgmgddbschema-5-0-0-6
TAG: pgmgddbschema-5-0-0-5
DATE: 07/30/2012
STAFF: lec
CHANGES: 
a)added 'greptable.sh'
b)add CLUSTER to index

TAG: pgmgddbschema-5-0-0-4
TAG: pgmgddbschema-5-0-0-3
TAG: pgmgddbschema-5-0-0-1
DATE: 07/12/2012
DATE: 07/23/2012
STAFF: lec
CHANGES: 
moved mgddbschema-pg-10 into separate product
this product needs to be sync-ed with mgddbschema
