@@ -3,6 +3,9 @@
 #
 # This file was generated automatically by dbschemaScripts.py -- edit with care.
 #
+# 10/01/2012	lec
+#	- TR10273/added _MutantCellLine_key_1/2
+#
 # 07/14/2011	lec
 #	- convert to ansi outer join
 #
@@ -17,6 +20,10 @@
 # 11/20/2001 lec
 #	- TR 2239/PhenoSlim; added alleleState
 #
+# union conditations:
+# 1:allele 2 is not null
+# 2:allele 2 is null
+#
 
 cd `dirname $0` && . ./Configuration
 
@@ -25,15 +32,23 @@ cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
 create view mgd.GXD_AllelePair_View
 as
-select a.*, m.symbol, m.chromosome, a1.symbol as allele1,  
-a2.symbol as allele2, t1.term as alleleState, t2.term as compound
+select a.*, m.symbol as symbol, m.chromosome as chromosome, a1.symbol as allele1,  
+       a2.symbol as allele2, t1.term as alleleState, t2.term as compound
 from GXD_AllelePair a
+     	INNER JOIN MRK_Marker m on (a._Marker_key = m._Marker_key)
+     	INNER JOIN ALL_Allele a1 on (a._Allele_key_1 = a1._Allele_key)
+     	INNER JOIN ALL_Allele a2 on (a._Allele_key_2 = a2._Allele_key)
+     	INNER JOIN VOC_Term t1 on (a._PairState_key = t1._Term_key)
+     	INNER JOIN VOC_Term t2 on (a._Compound_key = t2._Term_key)
+union
+select a.*, m.symbol as symbol, m.chromosome as chromosome, a1.symbol as allele1,  
+       null as allele2, t1.term as alleleState, t2.term as compound
+from GXD_AllelePair a
+     	INNER JOIN MRK_Marker m on (a._Marker_key = m._Marker_key)
      	INNER JOIN ALL_Allele a1 on (a._Allele_key_1 = a1._Allele_key)
      	INNER JOIN VOC_Term t1 on (a._PairState_key = t1._Term_key)
      	INNER JOIN VOC_Term t2 on (a._Compound_key = t2._Term_key)
-     	LEFT OUTER JOIN MRK_Marker m on (a._Marker_key = m._Marker_key)
-     	LEFT OUTER JOIN ALL_Allele a2 on (a._Allele_key_2 = a2._Allele_key)
-
+where a._Allele_key_2 is null
 
 
 ;
