@@ -3,8 +3,8 @@
 #
 # HISTORY
 #
-#       06/19/2012      lec
-#       - TR1110; add all fields from VOC_Annot
+#	06/19/2012	lec
+#	- TR1110; add all fields from VOC_Annot
 #
 # 	4/17/2008 - jsb - initial addition for TR8511
 
@@ -15,10 +15,13 @@ cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
 create view mgd.PRB_Strain_NeedsReview_View
 as
+
 select va.*, vt.term
 from VOC_Annot va, VOC_Term vt
 where va._AnnotType_key = 1008 
       and va._Term_key = vt._Term_key
+
+
 
 ;
 
